--- a/views/unidades.ejs
+++ b/views/unidades.ejs
@@ -21,34 +21,30 @@
                 <section class="dark">
                     <div class="container py-4">
                         <h1 class="h1 text-center text-light" id="pageHeaderTitle">Aprendiendo Ruby</h1>
-                       
 
 
-                            <div class="slider" width='100vh'>
-                                <ul   width='100vh'>
-                                    <li>
-                                        <img class="img-fluid"
-                                            src="https://blog.desafiolatam.com/wp-content/uploads/2019/01/funciones-ruby.png">
-                                    </li>
-                                    <li>
-                                        <img class="img-fluid" src="http://www.sg.com.mx/images/stories/sg20/dig_program1.jpg">
-                                    </li>
-                                    <li>
-                                        <img class="img-fluid" src="https://ichi.pro/assets/images/max/724/1*jbP7RfT1CKYURKyN5Nj9Kg.png">
-                                    </li>
-                                    <li>
-                                        <img class="img-fluid"
-                                            src="https://community-cdn-digitalocean-com.global.ssl.fastly.net/variants/hjt2y4LvdBts81w1pBEwRQDE/035575f2985fe451d86e717d73691e533a1a00545d7230900ed786341dc3c882">
-                                    </li>
-                                </ul>
-                            </div>
-                      
+
+                        <div class="slider" width='100vh'>
+                            <ul width='100vh'>
+                                <li>
+                                    <img class="img-fluid" src="https://blog.desafiolatam.com/wp-content/uploads/2019/01/funciones-ruby.png">
+                                </li>
+                                <li>
+                                    <img class="img-fluid" src="http://www.sg.com.mx/images/stories/sg20/dig_program1.jpg">
+                                </li>
+                                <li>
+                                    <img class="img-fluid" src="https://ichi.pro/assets/images/max/724/1*jbP7RfT1CKYURKyN5Nj9Kg.png">
+                                </li>
+                                <li>
+                                    <img class="img-fluid" src="https://community-cdn-digitalocean-com.global.ssl.fastly.net/variants/hjt2y4LvdBts81w1pBEwRQDE/035575f2985fe451d86e717d73691e533a1a00545d7230900ed786341dc3c882">
+                                </li>
+                            </ul>
+                        </div>
+
 
                         <article class="postcard dark blue">
                             <a class="postcard__img_link" href="#">
-                                <img class="img-fluid postcard__img"
-                                    src="https://cdn.thenewstack.io/media/2020/08/32b6ae37-cdee1264-creative-commons-photo-by-mathias-meyer-via-wikipedia-1241px-yukihiro_matsumoto_euruko_2011.jpg"
-                                    alt="Image Title" />
+                                <img class="img-fluid postcard__img" src="https://cdn.thenewstack.io/media/2020/08/32b6ae37-cdee1264-creative-commons-photo-by-mathias-meyer-via-wikipedia-1241px-yukihiro_matsumoto_euruko_2011.jpg" alt="Image Title" />
                             </a>
                             <div class="postcard__text">
                                 <h1 class="postcard__title blue"><a href="#">Creador</a></h1>
@@ -58,14 +54,9 @@
                                 </time> -->
                                 </div>
                                 <div class="postcard__bar"></div>
-                                <div class="postcard__preview-txt">El lenguaje fue creado por Yukihiro "Matz" Matsumoto,
-                                    quien empezó a trabajar en Ruby el 24 de febrero de 1993, y lo presentó al público
-                                    en el año 1995. En el círculo de amigos de Matsumoto se le puso el nombre de Ruby
-                                    &#40;en español rubí&#41; como broma aludiendo al lenguaje de programación Perl
-                                    &#40;perla en inglés&#41;. El creador del lenguaje ha dicho que Ruby está diseñado
-                                    para la productividad y la diversión del desarrollador,
-                                    siguiendo los principios de una buena interfaz de usuario. Sostiene que el diseño de
-                                    sistemas necesita enfatizar las necesidades humanas más que las de la máquina.</div>
+                                <div class="postcard__preview-txt">El lenguaje fue creado por Yukihiro "Matz" Matsumoto, quien empezó a trabajar en Ruby el 24 de febrero de 1993, y lo presentó al público en el año 1995. En el círculo de amigos de Matsumoto se le puso el nombre de Ruby
+                                    &#40;en español rubí&#41; como broma aludiendo al lenguaje de programación Perl &#40;perla en inglés&#41;. El creador del lenguaje ha dicho que Ruby está diseñado para la productividad y la diversión del desarrollador,
+                                    siguiendo los principios de una buena interfaz de usuario. Sostiene que el diseño de sistemas necesita enfatizar las necesidades humanas más que las de la máquina.</div>
                                 <!-- <ul class="postcard__tagbox">
                                     <li class="tag__item"><i class="fas fa-tag mr-2"></i>Podcast</li>
                                     <li class="tag__item"><i class="fas fa-clock mr-2"></i>55 mins.</li>
@@ -77,9 +68,7 @@
                         </article>
                         <article class="postcard dark red">
                             <a class="postcard__img_link" href="#">
-                                <img class="img-fluid postcard__img"
-                                    src="https://www.thoughtco.com/thmb/JpBnEUWE4Szf34r-7z0pKoQUPCs=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/2000px-Ruby-logo-R.svg-56a811b75f9b58b7d0f05e83.jpg"
-                                    alt="Image Title" />
+                                <img class="img-fluid postcard__img" src="https://www.thoughtco.com/thmb/JpBnEUWE4Szf34r-7z0pKoQUPCs=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/2000px-Ruby-logo-R.svg-56a811b75f9b58b7d0f05e83.jpg" alt="Image Title" />
                             </a>
                             <div class="postcard__text text-center">
                                 <h1 class="postcard__title red"><a href="#">Ruby</a></h1>
@@ -89,12 +78,8 @@
                                 </time>
                                 </div> -->
                                 <div class="postcard__bar"></div>
-                                <div class="postcard__preview-txt">Ruby es un lenguaje de programacion orientado a
-                                    objetos, es de proposito general, por lo que se puede desarrollar todo tipo de
-                                    aplicaciones diferentes; es un lenguaje interpretado, es decir, se necesita que el
-                                    intérprete
-                                    de Ruby evalué el código y lo traduzca en lenguaje de máquina entendible por un
-                                    ordenador, pero no existe un proceso previo de compilación como en C o Java. </div>
+                                <div class="postcard__preview-txt">Ruby es un lenguaje de programacion orientado a objetos, es de proposito general, por lo que se puede desarrollar todo tipo de aplicaciones diferentes; es un lenguaje interpretado, es decir, se necesita que el intérprete
+                                    de Ruby evalué el código y lo traduzca en lenguaje de máquina entendible por un ordenador, pero no existe un proceso previo de compilación como en C o Java. </div>
                                 <!-- <ul class="postcard__tagbox">
                                     <li class="tag__item"><i class="fas fa-tag mr-2"></i>Podcast</li>
                                     <li class="tag__item"><i class="fas fa-clock mr-2"></i>55 mins.</li>
@@ -106,9 +91,7 @@
                         </article>
                         <article class="postcard dark green">
                             <a class="postcard__img_link" href="#">
-                                <img class="img-fluid postcard__img"
-                                    src="https://aldibs.com/wp-content/uploads/2020/01/ruby-on-rails-development.jpg"
-                                    alt="Image Title" />
+                                <img class="img-fluid postcard__img" src="https://aldibs.com/wp-content/uploads/2020/01/ruby-on-rails-development.jpg" alt="Image Title" />
                             </a>
                             <div class="postcard__text">
                                 <h1 class="postcard__title green"><a href="#">Rails</a></h1>
@@ -118,10 +101,7 @@
                                 </time>
                                 </div> -->
                                 <div class="postcard__bar"></div>
-                                <div class="postcard__preview-txt">Uno de los elementos que hace que Ruby sea tan
-                                    popular es Ruby On Rails, un Framework que está muy de moda para realizar
-                                    aplicaciones Web modernas. Rails está escrito en Ruby, por lo tanto se necesita del
-                                    mismo para hacer
+                                <div class="postcard__preview-txt">Uno de los elementos que hace que Ruby sea tan popular es Ruby On Rails, un Framework que está muy de moda para realizar aplicaciones Web modernas. Rails está escrito en Ruby, por lo tanto se necesita del mismo para hacer
                                     aplicaciones Web.</div>
                                 <!-- <ul class="postcard__tagbox">
                                     <li class="tag__item"><i class="fas fa-tag mr-2"></i>Podcast</li>
@@ -133,11 +113,8 @@
                             </div>
                         </article>
                         <article class="postcard dark yellow">
-                            <a class="postcard__img_link"
-                                href="https://luissoto.website/wp-content/uploads/2020/09/ruby.jpg">
-                                <img class="img-fluid postcard__img"
-                                    src="https://luissoto.website/wp-content/uploads/2020/09/ruby.jpg"
-                                    alt="Image Title" />
+                            <a class="postcard__img_link" href="https://luissoto.website/wp-content/uploads/2020/09/ruby.jpg">
+                                <img class="img-fluid postcard__img" src="https://luissoto.website/wp-content/uploads/2020/09/ruby.jpg" alt="Image Title" />
                             </a>
                             <div class="postcard__text">
                                 <h1 class="postcard__title yellow"><a href="#">Gemas</a></h1>
@@ -147,10 +124,7 @@
                                 </time>
                                 </div> -->
                                 <div class="postcard__bar"></div>
-                                <div class="postcard__preview-txt">Una gema en Ruby es un conjunto de código
-                                    empaquetado. Se pueden utilizar las gemas por ejemplo para añadir a nuestro programa
-                                    funcionalidad que ya ha implementado otro desarrollador para así reutilizar código y
-                                    ahorrarnos
+                                <div class="postcard__preview-txt">Una gema en Ruby es un conjunto de código empaquetado. Se pueden utilizar las gemas por ejemplo para añadir a nuestro programa funcionalidad que ya ha implementado otro desarrollador para así reutilizar código y ahorrarnos
                                     trabajos.
                                 </div>
                                 <!-- <ul class="postcard__tagbox">
