--- a/views/tema1.ejs
+++ b/views/tema1.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/cards.css">
     <title>
         MoreRuby
     </title>
@@ -19,57 +20,42 @@
     <%- include ('partials/navigation3')%>
 
 </header>
-   
-<div class="mar">
-
-    <div class="container-fluid text-center ">
-        <img src="/img/fondo.png" class="img-fluid animate__bounceIn" >
-            
-    </div>
-<!--
-    <div class="container " >
-        <header class="row">
-            <div class="col-lg-12 text-center" >
-                <img src="/img/ruby.png" class="img-fluid animate__bounceIn" width="100px" style="margin: 20px;">
-            
-
-            </div>
-
-        </header>
-
-    </div>
-
-    <div class="container-fluid" >
-        <div class="row p-5 text center">
-            <div class="col-sm-6">
-                <p class="fs-1">Ruby</p>
-            </div>
-            <div class="col-sm-3">
-                <img src="/img/homer.gif" class="img-fluid " width="250px" style="margin: 20px;  border-radius: 1000px;">
-             </div>
-             <div class="col-sm-3 text-justify">
-                <p class="font-weight-light">Ruby es un lenguaje de programación interpretado, reflexivo y orientado a objetos, creado por el programador japonés Yukihiro "Matz" Matsumoto, quien comenzó a trabajar en Ruby en 1993, y lo presentó públicamente en 1995.</p>
-             </div>
-
+<article class="container-fluid  postcard dark blue text-center">
+    <div class="postcard__text">
+        <h1 class="postcard__title blue"><a href="#">Tema: Creación y ejecución de un proyecto</a></h1>
+       </div>
+</article>
+<article class="container-fluid  postcard dark blue">
+    <div class="postcard__text">
+        <h1 class="postcard__title blue"><a href="#">¿Quines somos?</a></h1>
+        <div class="postcard__subtitle small">
         </div>
-
+        <div class="postcard__bar"></div>
+        <div class="postcard__preview-txt text-light">Somos un grupo de estudiantes de la universidad de El Salvador de la carrera de ingenieria en sistemas informaticos, de la materia Tecnicas de Programación en Internet &#40;TPI115&#41;.</div>
     </div>
-    <div class="container-fluid" >
-        <div class="row p-5 text center">
-            <div class="col-sm-6">
-             
-            </div>
-            <div class="col-sm-3">
-               
-             </div>
-             <div class="col-sm-3">
-              
-             </div>
-
+</article>
+<article class="container-fluid  postcard dark blue">
+    <div class="postcard__text">
+        <h1 class="postcard__title blue"><a href="#">Misión</a></h1>
+        <div class="postcard__subtitle small">
         </div>
+        <div class="postcard__bar"></div>
+        <div class="postcard__preview-txt text-light">Institución en nuestro país eminentemente académica, rectora de la educación superior, formadora de profesionales con alores éticos firmes, garante del desarrollo, de la ciencia, el arte, la cultura y el deporte. Crítica de la realidad, con
+            capacidad de proponer soluciones a los problemas nacionales a través de la investigación filosófica, científica artística y tecnológica; de carácter universal.</div>
+    </div>
+</article>
+<article class="container-fluid  postcard dark blue">
+    <div class="postcard__text">
+        <h1 class="postcard__title blue"><a href="#">Visión</a></h1>
+        <div class="postcard__subtitle small">
+        </div>
+        <div class="postcard__bar"></div>
+        <div class="postcard__preview-txt text-light">Ser una universidad transformadora de la educación superior y desempeñar un papel protagónico relevante, en la transformación de la conciencia crítica y prepositiva de la sociedad salvadoreña, con liderazgo en la innovación educativa y excelencia
+            académica, a través de la integración de las funciones básicas de la universidad: la docencia la investigación y la proyección social.</div>
+    </div>
+</article>
 
-    </div>-->    
-</div>
+
 <footer>
     <%- include ('partials/footer')%>
 </footer>
