--- a/views/partials/navigation3.ejs
+++ b/views/partials/navigation3.ejs
@@ -22,6 +22,7 @@
             </ul>
         </li>
         <li class="menu__item"><a href="/ejemplos" class="menu__link">Ejemplos</a></li>
+        <li class="menu__item"><a href="/consola" class="menu__link">Consola</a></li>
         <li class="menu__item"><a href="/infoempresa" class="menu__link">Acerca de</a></li>
     </ul>
 </nav>
