--- a/views/tema1.ejs
+++ b/views/tema1.ejs
@@ -26,34 +26,102 @@
        </div>
 </article>
 <article class="container-fluid  postcard dark blue">
+  
     <div class="postcard__text">
-        <h1 class="postcard__title blue"><a href="#">¿Quines somos?</a></h1>
+        <h1 class="postcard__title blue text-center"><a href="#">Creación de un proyecto</a></h1>
         <div class="postcard__subtitle small">
         </div>
         <div class="postcard__bar"></div>
-        <div class="postcard__preview-txt text-light">Somos un grupo de estudiantes de la universidad de El Salvador de la carrera de ingenieria en sistemas informaticos, de la materia Tecnicas de Programación en Internet &#40;TPI115&#41;.</div>
+        <div class="postcard__preview-txt text-light">~Primero debemos escoger el editor de texto que vamos a utilizar, este puede ser Visual Studio Code, Sublime text, block de nota, etc. lo importantes es que este archivo lo guardemos con la extención .rb  </div>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <h5><strong>Ejemplo (Utilizando Visual Studio Code)</strong>  </h5>
+                <br>
+            </div>
+        </div>
+            <div class="row ">
+               
+            <div class="col-sm-3">
+                
+                <div class="text-light text-justify">1) Abrimos code y presionamos New File </div>
+                <img class="img-fluid" src="img/creacion1.png"  alt="Imagen">
+            </div>
+           
+            <div class="col-sm-3">
+                
+                <div class="text-light text-justify">2) Seleccionamos "Save As" </div>
+                <img class="img-fluid" src="img/create2.png" alt="Imagen">
+            </div>
+           
+            <div class="col-sm-3"  >
+                
+                <div class="text-light text-justify" >3) Asignamos un nombre y colocamos la extención .rb seleccionamos la localizacion y presionamos guardar. </div>
+                <img class="img-fluid" src="img/create3.png"  alt="Imagen">
+            </div>
+            <div class="col-sm-3"  >
+                
+                <div class="text-light text-justify" >4) Code reconocera la extencion y ahora podremos comenzar a digitar nuestro codigo. </div>
+                <img class="img-fluid" src="img/create5.png"  alt="Imagen">
+            </div>
+          
+        </div>
+    
     </div>
+
+
 </article>
+
 <article class="container-fluid  postcard dark blue">
+  
     <div class="postcard__text">
-        <h1 class="postcard__title blue"><a href="#">Misión</a></h1>
+        <h1 class="postcard__title blue text-center"><a href="#">Ejecución de un proyecto</a></h1>
         <div class="postcard__subtitle small">
         </div>
         <div class="postcard__bar"></div>
-        <div class="postcard__preview-txt text-light">Institución en nuestro país eminentemente académica, rectora de la educación superior, formadora de profesionales con alores éticos firmes, garante del desarrollo, de la ciencia, el arte, la cultura y el deporte. Crítica de la realidad, con
-            capacidad de proponer soluciones a los problemas nacionales a través de la investigación filosófica, científica artística y tecnológica; de carácter universal.</div>
-    </div>
-</article>
-<article class="container-fluid  postcard dark blue">
-    <div class="postcard__text">
-        <h1 class="postcard__title blue"><a href="#">Visión</a></h1>
-        <div class="postcard__subtitle small">
+        <div class="postcard__preview-txt text-light">~Primero debemos abrir la terminal, en ella nos vamos a localizar en la carpeta donde este ubicado nuestro proyecto y procedemos a ejecutarlo para ello debemos digitar: ruby nombre.rb donde nombre es el nombre de nuestro programa.  </div>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <h5><strong>Ejemplo (Utilizando Visual Studio Code)</strong>  </h5>
+                <br>
+            </div>
         </div>
-        <div class="postcard__bar"></div>
-        <div class="postcard__preview-txt text-light">Ser una universidad transformadora de la educación superior y desempeñar un papel protagónico relevante, en la transformación de la conciencia crítica y prepositiva de la sociedad salvadoreña, con liderazgo en la innovación educativa y excelencia
-            académica, a través de la integración de las funciones básicas de la universidad: la docencia la investigación y la proyección social.</div>
+            <div class="row ">
+               
+            <div class="col-sm-4">
+                
+                <div class="text-light text-justify">1) Abrimos la terminal desde Code </div>
+                <img class="img-fluid" src="img/ejecuta1.png"  alt="Imagen">
+            </div>
+           
+            <div class="col-sm-4">
+                
+                <div class="text-light text-justify">2) Nos dirigimos a la carpeta donde se encuentra nuestro proyecto </div>
+                <img class="img-fluid" src="img/ejecuta2.png" alt="Imagen">
+            </div>
+           
+            <div class="col-sm-4"  >
+                
+                <div class="text-light text-justify" >3) Digitamos ruby seguido del nombre de nuestro programa junto con la extención .js y presionamos enter. </div>
+                <img class="img-fluid" src="img/ejecuta3.png"  alt="Imagen">
+            </div>
+          
+          
+        </div>
+    
     </div>
+
 </article>
+<article class="container-fluid  postcard dark blue text-center">
+    <div class="postcard__text">
+        <h1 class="postcard__title blue"><a href="#">Vídeos</a></h1>
+    </div>
+       
+</article>
+<div class="container-fluid  text-center">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/XK3dlWHBt64?start=261" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   
+</div>
+
 
 
 <footer>
