--- a/views/tema1.ejs
+++ b/views/tema1.ejs
@@ -20,6 +20,7 @@
     <%- include ('partials/navigation3')%>
 
 </header>
+<div class="mar">
 <article class="container-fluid  postcard dark blue text-center">
     <div class="postcard__text">
         <h1 class="postcard__title blue"><a href="#">Tema: Creación y ejecución de un proyecto</a></h1>
@@ -117,11 +118,11 @@
     </div>
        
 </article>
-<div class="container-fluid  text-center">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/XK3dlWHBt64?start=261" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div  text-center">
+    <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/XK3dlWHBt64?start=261" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    
 </div>
-
+</div>
 
 
 <footer>
