--- a/views/infoempresa.ejs
+++ b/views/infoempresa.ejs
@@ -22,7 +22,7 @@
     </header>
     <article class="container-fluid  postcard dark blue">
         <div class="postcard__text">
-            <h1 class="postcard__title blue"><a href="#">¿Quines somos?</a></h1>
+            <h1 class="postcard__title blue"><a href="#">¿Quiénes somos?</a></h1>
             <div class="postcard__subtitle small">
             </div>
             <div class="postcard__bar"></div>
