--- a/views/tema2.ejs
+++ b/views/tema2.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/cards.css">
     <title>
         MoreRuby
     </title>
@@ -16,59 +17,212 @@
 
 <header>
     <%- include ('partials/navigation2')%>
+    <%- include ('partials/navigation3')%>
 
 </header>
-   
-<div class="mar">
-
-    <div class="container-fluid text-center ">
-        <img src="/img/fondo.png" class="img-fluid animate__bounceIn" >
-            
-    </div>
-<!--
-    <div class="container " >
-        <header class="row">
-            <div class="col-lg-12 text-center" >
-                <img src="/img/ruby.png" class="img-fluid animate__bounceIn" width="100px" style="margin: 20px;">
-            
-
-            </div>
-
-        </header>
-
-    </div>
-
-    <div class="container-fluid" >
-        <div class="row p-5 text center">
-            <div class="col-sm-6">
-                <p class="fs-1">Ruby</p>
-            </div>
-            <div class="col-sm-3">
-                <img src="/img/homer.gif" class="img-fluid " width="250px" style="margin: 20px;  border-radius: 1000px;">
-             </div>
-             <div class="col-sm-3 text-justify">
-                <p class="font-weight-light">Ruby es un lenguaje de programación interpretado, reflexivo y orientado a objetos, creado por el programador japonés Yukihiro "Matz" Matsumoto, quien comenzó a trabajar en Ruby en 1993, y lo presentó públicamente en 1995.</p>
-             </div>
-
+<article class="container-fluid  postcard dark blue text-center">
+    <div class="postcard__text">
+        <h1 class="postcard__title blue"><a href="#">Tema: Conceptos básicos</a></h1>
+       </div>
+</article>
+<article class="container-fluid  postcard dark blue">
+  
+    <div class="postcard__text">
+        <h1 class="postcard__title blue text-center"><a href="#">Variables</a></h1>
+        <div class="postcard__subtitle small">
         </div>
-
-    </div>
-    <div class="container-fluid" >
-        <div class="row p-5 text center">
-            <div class="col-sm-6">
-             
+        <div class="postcard__bar"></div>
+        <div class="postcard__preview-txt text-light"> <strong > <h4>. Concepto</h4> </strong> <p>Es un elemento de datos con nombre cuyo valor puede cambiar durante el curso de la ejecución de un programa.</p> 
+        <strong > <h4>. Descripción</h4> </strong>
+        </p>  En primer lugar se coloca el nombre que tendra nuesta varible, este debe expresar el contenido que contendra la variable (no deben utilizarse palabras reservadas para definir variables, ni inicializar las varibles con mayusculas o números), luego el operador de asignacion = y por ultimo el dato que contendra dicha varible (En ruby no es necesario definir el tipo de datos y su tipo puede cambiar a lo largo de la ejecución del programa).</p> </div>
+   <br>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <h5><strong>Ejemplo</strong>  </h5>
+                <br>
             </div>
-            <div class="col-sm-3">
+        </div>
+            <div class="row text-center">
                
-             </div>
-             <div class="col-sm-3">
-              
-             </div>
-
+            <div class="col-sm-6 ">
+                
+                <div class="text-light ">Código</div>
+                <img class="img-fluid " src="img/variables1.png"  alt="Imagen">
+            </div>
+           
+            <div class="col-sm-6">
+                
+                <div class="text-light text-justify">Resultado </div>
+                <img class="img-fluid" src="img/variables2.png" alt="Imagen">
+            </div>
+           
+           
+          
         </div>
+    
+    </div>
 
-    </div>-->    
+
+</article>
+
+<article class="container-fluid  postcard dark blue">
+  
+    <div class="postcard__text">
+        <h1 class="postcard__title blue text-center"><a href="#">Números</a></h1>
+        <div class="postcard__subtitle small">
+        </div>
+        <div class="postcard__bar"></div>
+        <div class="postcard__preview-txt text-light"> <strong > <h4>. Concepto</h4> </strong> <p>Enteros: son aquellos que no contienen decimales, pueden ser positivos o negativos además del cero.</p> 
+            <p>Float: representa números reales positivos y negativos .</p> 
+        <strong > <h4>. Descripción</h4> </strong>
+        </p> Es importante distinguir entre estos dos tipos de núumeros, pues a la hora de trabajar con ellos el resultado puede verse afectado dependiendo de cuales utilicemos. Por ejemplo el resultado de la división de dos numeros enteros dara como resultado otro número entero, también se puede pasar de enteros a float usando " 10.to_f " o viceversa con " 10.5.to_i " </p> </div>
+   <br>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <h5><strong>Ejemplo</strong>  </h5>
+                <br>
+            </div>
+        </div>
+            <div class="row text-center">
+               
+            <div class="col-sm-6 ">
+                
+                <div class="text-light ">Código</div>
+                <img class="img-fluid " src="img/numero1.png"  alt="Imagen">
+            </div>
+           
+            <div class="col-sm-6">
+                
+                <div class="text-light text-justify">Resultado </div>
+                <img class="img-fluid" src="img/numero2.png" alt="Imagen">
+            </div>
+           
+           
+          
+        </div>
+    
+    </div>
+
+
+</article>
+
+<article class="container-fluid  postcard dark blue">
+  
+    <div class="postcard__text">
+        <h1 class="postcard__title blue text-center"><a href="#">Cadenas</a></h1>
+        <div class="postcard__subtitle small">
+        </div>
+        <div class="postcard__bar"></div>
+        <div class="postcard__preview-txt text-light"> <strong > <h4>. Concepto</h4> </strong> <p>es una sucesión de caracteres (letras, números u otros signos o símbolos). Si no se ponen restricciones al alfabeto, una cadena podrá estar formada por cualquier combinación finita de los caracteres disponibles (las letras de la 'a' a la 'z' y de la 'A' a la 'Z', los números del '0' al '9', el espacio en blanco ' ', símbolos diversos '!', '@', '%', etcétera).</p> 
+        <strong > <h4>. Descripción</h4> </strong>
+        </p>  Las cadenas se pueden asignar a variables o imprimirlas directamente, de caracterizan por estar dentro de comillas simples o dobles y se pueden concatenar e interpolar. </p> </div>
+   <br>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <h5><strong>Ejemplo</strong>  </h5>
+                <br>
+            </div>
+        </div>
+            <div class="row text-center">
+               
+            <div class="col-sm-6 ">
+                
+                <div class="text-light ">Código</div>
+                <img class="img-fluid " src="img/cadena1.png"  alt="Imagen">
+            </div>
+           
+            <div class="col-sm-6">
+                
+                <div class="text-light text-justify">Resultado </div>
+                <img class="img-fluid" src="img/cadena2.png" alt="Imagen">
+            </div>
+           
+           
+          
+        </div>
+    
+    </div>
+
+
+</article>
+
+<article class="container-fluid  postcard dark blue">
+  
+    <div class="postcard__text">
+        <h1 class="postcard__title blue text-center"><a href="#">Variables</a></h1>
+        <div class="postcard__subtitle small">
+        </div>
+        <div class="postcard__bar"></div>
+        <div class="postcard__preview-txt text-light"> <strong > <h4>. Concepto</h4> </strong> <p>Es un elemento de datos con nombre cuyo valor puede cambiar durante el curso de la ejecución de un programa.</p> 
+        <strong > <h4>. Descripción</h4> </strong>
+        </p>  En primer lugar se coloca el nombre que tendra nuesta varible, este debe expresar el contenido que contendra la variable (no deben utilizarse palabras reservadas para definir variables, ni inicializar las varibles con mayusculas o números), luego el operador de asignacion = y por ultimo el dato que contendra dicha varible (En ruby no es necesario definir el tipo de datos y su tipo puede cambiar a lo largo de la ejecución del programa).</p> </div>
+   <br>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <h5><strong>Ejemplo</strong>  </h5>
+                <br>
+            </div>
+        </div>
+            <div class="row text-center">
+               
+            <div class="col-sm-6 ">
+                
+                <div class="text-light ">Código</div>
+                <img class="img-fluid " src="img/variables1.png"  alt="Imagen">
+            </div>
+           
+            <div class="col-sm-6">
+                
+                <div class="text-light text-justify">Resultado </div>
+                <img class="img-fluid" src="img/variables2.png" alt="Imagen">
+            </div>
+           
+           
+          
+        </div>
+    
+    </div>
+
+
+</article>
+
+<article class="container-fluid  postcard dark blue text-center">
+    <div class="postcard__text">
+        <h1 class="postcard__title blue"><a href="#">Vídeos</a></h1>
+    </div>
+       
+</article>
+<div class="container-fluid  text-center">
+    <div class="row text-center">
+               
+        <div class="col-sm-6 ">
+            
+            <div class="text-light ">VARIABLES</div>
+            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/A-uKUrBw_5o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+       
+        <div class="col-sm-6">
+            <div class="text-light ">NUMEROS</div>
+            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/xPx8E1ne8oU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            
+        </div>
+       
+        <div class="col-sm-6">
+            <div class="text-light ">CADENAS</div>
+            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/1rA489RNCOQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      
+        </div>
+        <div class="col-sm-6">
+            <div class="text-light ">CADENAS</div>
+            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/1rA489RNCOQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      
+        </div>
+     
+    </div>
 </div>
+
+
+
 <footer>
     <%- include ('partials/footer')%>
 </footer>
