--- a/views/partials/navigation3.ejs
+++ b/views/partials/navigation3.ejs
@@ -19,6 +19,9 @@
                 <li class="menu__item">
                     <a href="/tema4" class="menu__link">Tema IV</a>
                 </li>
+                <li class="menu__item">
+                    <a href="/tema5" class="menu__link">Tema V</a>
+                </li>
             </ul>
         </li>
         <li class="menu__item"><a href="/ejemplos" class="menu__link">Ejemplos</a></li>
