--- a/views/tema1.ejs
+++ b/views/tema1.ejs
@@ -118,8 +118,10 @@
     </div>
        
 </article>
-<div  text-center">
+<div class="col-sm-6">
     <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/XK3dlWHBt64?start=261" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   
+
    
 </div>
 </div>
