--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,5 @@
 <!--Bootstrap-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- FONT AWESOME -->
 <script src="https://kit.fontawesome.com/318ff7750c.js" crossorigin="anonymous"></script>
 <!--Google Fonts-->
@@ -18,3 +17,4 @@
 
 <link rel="stylesheet" href="/css/menu.css">
 <link rel="stylesheet" href="/css/slider.css">
+<link rel="shortcut icon" type="image/x-icon" href="/img/ico/icono.ico">
